feat: initial implementation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
 [project]
-name = "python-uv-template"
+name = "polars-tsfresh"
 version = "0.1.0"
 description = "A Project Template of Python with uv"
 authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
 requires-python = ">=3.13"
-dependencies = ["fastapi>=0.116.1", "uvicorn[standard]>=0.35.0"]
+dependencies = [
+    "polars>=1.36.1",
+]
 
 [project.scripts]
 app = "app.cli:main"
 
 [dependency-groups]
 dev = [
+    "ipykernel>=7.1.0",
     "poethepoet>=0.39.0",
     "pyrefly>=0.46.1",
     "pytest-cov>=7.0.0",
@@ -24,9 +27,6 @@ build-backend = "uv_build"
 [tool.uv]
 managed = true
 
-[tool.uv.build-backend]
-module-name = ["app"]
-
 [tool.poe.tasks]
 ruff_check = "ruff check ."
 ruff_fix = "ruff check --fix ."
@@ -34,7 +34,7 @@ ruff_format = "ruff format ."
 pyrefly_check = "pyrefly check ."
 check = ["ruff_check", "pyrefly_check"]
 format = ["ruff_fix", "ruff_format"]
-test = "pytest tests -n auto --cov=app --cov-report=term --cov-report=xml"
+test = "pytest tests --cov=polars_tsfresh --cov-report=term --cov-report=xml"
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::FutureWarning"]
